--- a/Game/index.html
+++ b/Game/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Game Of Life</title>
 	<meta charset="utf8">
+	<link rel = 'stylesheet' href = 'styles.css'>
 </head>
 <body>
+
+	<div class="stats">
+		<h1> Game Of Life </h1>
+		<h2> Statistics </h2>
+
+	</div>
+
+
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="script.js"></script>
-	<script src="living.js"></script>
-	<script src="grass.js"></script>
-	<script src="grassEater.js"></script>
-	<script src="predator.js"></script>
-	<script src="omnivore.js"></script>
-	<script src="spawner.js"></script>
+
 </body>
 </html>
