new class added

--- a/Game/index.html
+++ b/Game/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
-	<div class="stats">
+
+	<!-- HAMARNERY CLASSNERIN TRVAC HAMARNERIN CHEN HAMAPATASXANUM!!!  -->
+
+
+	<div class="stats container">
 		<h1> Game Of Life </h1>
 		<h2> Statistics </h2>
 
-		<table class="table container">
+		<table class="table">
 		  <thead>
 		    <tr>
 		      <th scope="col">#</th>
@@ -50,23 +54,31 @@
 		    </tr>
 
 		    <tr>
-		      <th scope="row">3</th>
+		      <th scope="row">4</th>
 		      <td>Omnivore</td>
 		      <td> <div class="omCol"></div> </td>
-		      <td>Omnivore Eats Everything Expect The Predators</td>
+		      <td>Omnivores Are Humans, They Eat Grass And Grass Eaters</td>
 		      <td class="omnivoreCount"></td>
 		    </tr>
 
 		    <tr>
-		      <th scope="row">3</th>
+		      <th scope="row">5</th>
+		      <td>Poacher</td>
+		      <td> <div class="pchCol"></div> </td>
+		      <td>Poacher Is Illegally Killing Grass Eaters And Predators, Everyone is Afraid of Him, No One Kills Him</td>
+		      <td class="poacherCount"></td>
+		    </tr>
+
+		    <tr>
+		      <th scope="row">6</th>
 		      <td>Spawner</td>
 		      <td> <div class="spCol"></div> </td>
-		      <td>Spawner Is Always Alone And Helps To Balance The Game By Creating Every Extinct Species. He Can't Move Or Be Kiled</td>
+		      <td>Spawner Is Always Alone And Helps To Balance The Game By Creating Every Extinct Species. He Can't Move Or Be Killed</td>
 		      <td class="spawnerCount"></td>
 		  	</tr>
 
 		    <tr>
-		      <th scope="row">4</th>
+		      <th scope="row">7</th>
 		      <td>Empty Cells</td>
 		      <td> <div class="ecCol"></div> </td>
 		      <td>Those Are Empty Cells to Where Every Creature Can Move</td>
@@ -75,6 +87,10 @@
 
 		  </tbody>
 		</table>
+
+		<!-- <div class="functions">
+			<button class="btn btn-primary" onclick="kill(1)">Link</button>
+		</div> -->
 
 	</div>
 
