--- a/Game/index.html
+++ b/Game/index.html
@@ -65,7 +65,7 @@
 		      <th scope="row">5</th>
 		      <td>Poacher</td>
 		      <td> <div class="pchCol"></div> </td>
-		      <td>Poacher Is Illegally Killing Grass Eaters And Predators, Everyone is Afraid of Him, No One Kills Him</td>
+		      <td>Poacher Is Illegally Killing Predators And Omnivores, Everyone is Afraid of Him, No One Kills Him</td>
 		      <td class="poacherCount"></td>
 		    </tr>
 
@@ -88,11 +88,12 @@
 		  </tbody>
 		</table>
 
-		<div class="functions">
+		<div class="functions mb-3">
 			<h2 class="mb-3">Interactions</h2>
 			<div class="res mb-2">
 				<button class="btn btn-outline-dark" onclick="restart()">Restart</button>
 			</div>
+
 			<div class="upper mb-2">
 				<button class="btn btn-outline-success" onclick="sendClear(1)">Clear Grass</button>
 
@@ -106,7 +107,10 @@
 
 				<button class="btn btn-outline-purple" onclick="sendClear(6)">Kill Poachers</button>
 			</div>
-			
+		</div>
+
+		<div class="seasDiv">
+			<h2 class="season"></h2>
 		</div>
 
 	</div>
